--- a/email_sender.html
+++ b/email_sender.html
@@ -24,7 +24,7 @@
       }, false);
     </script>
   </head>
-  <body>
-    <p>Komponenta připravená pro odeslání e-mailu přes EmailJS.</p>
-  </body>
-</html>
+<body>
+  <p>Komponenta připravená pro odeslání e-mailu přes EmailJS.</p>
+  <p id="debug">🟢 Komponenta nahrána</p>
+</body>
