--- a/email_sender.html
+++ b/email_sender.html
@@ -25,6 +25,9 @@
     </script>
   </head>
 <body>
-  <p>Komponenta připravená pro odeslání e-mailu přes EmailJS.</p>
-  <p id="debug">🟢 Komponenta nahrána</p>
+  <p>✅ EmailJS komponenta nahrána</p>
+
+  <script>
+    document.body.insertAdjacentHTML("beforeend", "<p id='debug'>🧪 JavaScript aktivní</p>");
+  </script>
 </body>
