--- a/email_sender.html
+++ b/email_sender.html
@@ -12,10 +12,17 @@
 .then(function(response) {
    alert("✅ E-mail odeslán:\n" + JSON.stringify(response));
    window.parent.postMessage("SUCCESS", "*");
-}, function(error) {
-   alert("❌ Chyba při odesílání:\n" + JSON.stringify(error));
-   window.parent.postMessage("ERROR", "*");
-});
+}, function sendEmail(data) {
+  emailjs.send("gmail", "template_sfiw4ow", data)
+  .then(function(response) {
+     alert("✅ E-mail odeslán:\n" + JSON.stringify(response));
+     window.parent.postMessage("SUCCESS", "*");
+  }, function(error) {
+     alert("❌ Chyba při odesílání:\n" + JSON.stringify(error));
+     window.parent.postMessage("ERROR", "*");
+  });
+}
+
 
       window.addEventListener("message", function(event){
         if (event.data.type === "SEND_EMAIL") {
