--- a/email_sender.html
+++ b/email_sender.html
@@ -4,28 +4,22 @@
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script type="text/javascript">
       (function(){
-        emailjs.init("jgIPteokbr7hfxXk_"); // ← sem doplň svůj USER ID z EmailJS
+        emailjs.init("jgIPteokbr7hfxXk_"); // USER ID
       })();
 
       function sendEmail(data) {
+        alert("🧪 Funkce sendEmail() byla spuštěna!");
+        console.log("Data přijata:", data);
+
         emailjs.send("gmail", "template_sfiw4ow", data)
-.then(function(response) {
-   alert("✅ E-mail odeslán:\n" + JSON.stringify(response));
-   window.parent.postMessage("SUCCESS", "*");
-}, function sendEmail(data) {
-  alert("🧪 Funkce sendEmail() byla spuštěna!");
-  console.log("Data přijata:", data);
-
-  emailjs.send("gmail", "template_sfiw4ow", data)
-  .then(function(response) {
-     alert("✅ E-mail odeslán:\n" + JSON.stringify(response));
-     window.parent.postMessage("SUCCESS", "*");
-  }, function(error) {
-     alert("❌ Chyba při odesílání:\n" + JSON.stringify(error));
-     window.parent.postMessage("ERROR", "*");
-  });
-}
-
+        .then(function(response) {
+           alert("✅ E-mail odeslán:\n" + JSON.stringify(response));
+           window.parent.postMessage("SUCCESS", "*");
+        }, function(error) {
+           alert("❌ Chyba při odesílání:\n" + JSON.stringify(error));
+           window.parent.postMessage("ERROR", "*");
+        });
+      }
 
       window.addEventListener("message", function(event){
         if (event.data.type === "SEND_EMAIL") {
@@ -34,10 +28,10 @@
       }, false);
     </script>
   </head>
-<body>
-  <p>✅ EmailJS komponenta nahrána</p>
-
-  <script>
-    document.body.insertAdjacentHTML("beforeend", "<p id='debug'>🧪 JavaScript aktivní</p>");
-  </script>
-</body>
+  <body>
+    <p>✅ EmailJS komponenta nahrána</p>
+    <script>
+      document.body.insertAdjacentHTML("beforeend", "<p id='debug'>🧪 JavaScript aktivní</p>");
+    </script>
+  </body>
+</html>
