--- a/email_sender.html
+++ b/email_sender.html
@@ -40,4 +40,31 @@
 
       // Odeslání e-mailu přes EmailJS
       function sendEmail(data) {
-        console.log("📩 sendEmail přijím
+        console.log("📩 sendEmail přijímá:", data);
+        showResult("🧪 Funkce sendEmail() byla spuštěna!", "success");
+
+        emailjs.send("gmail", "template_sfiw4ow", data)
+        .then(function(response) {
+          showResult("✅ E-mail odeslán!", "success");
+          window.parent.postMessage("SUCCESS", "*");
+        }, function(error) {
+          showResult("❌ Chyba při odesílání!", "error");
+          window.parent.postMessage("ERROR", "*");
+        });
+      }
+
+      // Posloucháme zprávy od Streamlit komponenty
+      window.addEventListener("message", function(event){
+        if (event.data.type === "SEND_EMAIL") {
+          sendEmail(event.data.payload);
+        }
+      }, false);
+    </script>
+  </head>
+  <body>
+    <p>✅ EmailJS komponenta nahrána (verze 1.6)</p>
+    <script>
+      document.body.insertAdjacentHTML("beforeend", "<p id='debug'>🧪 JavaScript aktivní</p>");
+    </script>
+  </body>
+</html>
