--- a/email_sender.html
+++ b/email_sender.html
@@ -1,70 +1,73 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script type="text/javascript">
-      (function(){
-        emailjs.init("jgIPteokbr7hfxXk_");
+    <meta charset="UTF-8" />
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+      // Inicializace EmailJS
+      (function () {
+        emailjs.init("jgIPteokbr7hfxXk_"); // ← nahraď svým USER ID
+        console.log("✅ EmailJS inicializován");
       })();
 
-      // Překryvný box pro zprávy
+      // Překryvný box pro výsledek
       function showResult(msg, type) {
-        console.log("📣 showResult spuštěn s textem:", msg);
-
         const el = document.createElement("div");
         el.innerText = msg;
-
         el.style.position = "fixed";
         el.style.top = "30px";
         el.style.left = "50%";
         el.style.transform = "translateX(-50%)";
         el.style.padding = "14px 24px";
         el.style.backgroundColor = type === "success" ? "#28a745" : "#dc3545";
-        el.style.color = "#ffffff";
+        el.style.color = "#fff";
         el.style.fontSize = "16px";
         el.style.fontWeight = "bold";
-        el.style.fontFamily = "sans-serif";
         el.style.borderRadius = "8px";
         el.style.boxShadow = "0 4px 12px rgba(0,0,0,0.4)";
         el.style.zIndex = 9999;
         el.style.opacity = 1;
         el.style.transition = "opacity 0.5s ease";
-
         document.body.appendChild(el);
-
         setTimeout(() => {
           el.style.opacity = 0;
           setTimeout(() => document.body.removeChild(el), 500);
         }, 4000);
       }
 
-      // Odeslání e-mailu přes EmailJS
+      // Odeslání e-mailu
       function sendEmail(data) {
-        console.log("📩 sendEmail přijímá:", data);
-        showResult("🧪 Funkce sendEmail() byla spuštěna!", "success");
+        console.log("📩 Odesílám e-mail s daty:", data);
 
-        emailjs.send("gmail", "template_sfiw4ow", data)
-        .then(function(response) {
-          showResult("✅ E-mail odeslán!", "success");
-          window.parent.postMessage("SUCCESS", "*");
-        }, function(error) {
-          showResult("❌ Chyba při odesílání!", "error");
-          window.parent.postMessage("ERROR", "*");
-        });
+        emailjs.send("gmail", "template_sfiw4ow", data).then(
+          function (response) {
+            console.log("✅ E-mail odeslán:", response);
+            showResult("✅ E-mail byl úspěšně odeslán.", "success");
+            window.postMessage("SUCCESS", "*");
+          },
+          function (error) {
+            console.error("❌ Chyba při odesílání:", error);
+            showResult("❌ Chyba při odesílání e-mailu.", "error");
+            window.postMessage("ERROR", "*");
+          }
+        );
       }
 
-      // Posloucháme zprávy od Streamlit komponenty
-      window.addEventListener("message", function(event){
-        if (event.data.type === "SEND_EMAIL") {
+      // Posloucháme zprávu od Streamlit
+      window.addEventListener("message", function (event) {
+        if (event.data && event.data.type === "SEND_EMAIL") {
           sendEmail(event.data.payload);
         }
-      }, false);
+      });
     </script>
   </head>
   <body>
     <p>✅ EmailJS komponenta nahrána (verze 1.6)</p>
     <script>
-      document.body.insertAdjacentHTML("beforeend", "<p id='debug'>🧪 JavaScript aktivní</p>");
+      document.body.insertAdjacentHTML(
+        "beforeend",
+        "<p id='debug'>🧪 JavaScript aktivní</p>"
+      );
     </script>
   </body>
 </html>
